--- a/app/src/main/res/layout/activity_seller_orders.xml
+++ b/app/src/main/res/layout/activity_seller_orders.xml
@@ -17,7 +17,7 @@
             android:background="@color/black"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_seller_products"
+            android:id="@+id/rv_seller_orders"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/seller_orders_toolbar"
